library_group("C++")
{
    deps =
    [
        "Atomic",
        "Chrono",
        "Containers",
        "Coroutine",
        "Format",
        #"IO",
        "LanguageSupport",
        "Locale",
        #"Maths",
        "PMR",
        #"Regex",
        "Runtime",
        #"Stacktrace",
        "StdLib",
        "Threads",
        "TypeTraits",
        "Utility",
    ]
}
