library_group("C++")
{
    deps =
    [
        #"Algorithm",
        "Atomic",
        "Chrono",
        "Containers",
        "Core",
        #"Coroutine",
        "Exception",
        "Format",
        #"IO",
        "LanguageSupport",
        "Locale",
        #"Maths",
        "PMR",
        #"Regex",
        "Runtime",
        #"Stacktrace",
        "StdLib",
        "String",
        "Threads",
        "TypeTraits",
        "Utility",
    ]
}
