template("crt_file")
{
    forward_variables_from(invoker, ["defines"])

    library_name = "System.ABI.CRT.${target_name}"
    library_version = "0.1.0"

    use_stdlib = false
    is_source_set = true
    target_types = ["static"]

    include_prefix = "System/ABI/CRT"

    library(target_name)
    {
        sources =
        [
            "CRT.cc",
        ]
    }

    copy(target_name)
    {
        deps =
        [
            ":${target_name}__static",
        ]

        sources =
        [
            "${target_out_dir}/${target_name}__static.CRT.cc.o",
        ]

        outputs = 
        [
            "${root_build_dir}/${toolchain_out_dir}/System.ABI.C++.CRT.${target_name}.o",
        ]
    }
}


crt_file("crtbegin")
{
    defines = ["__CRTBEGIN"]
}

crt_file("crtbeginS")
{
    defines = ["__CRTBEGINS"]
}

crt_file("crtbeginT")
{
    defines = ["__CRTBEGINT"]
}

crt_file("crtend")
{
    defines = ["__CRTEND"]
}

crt_file("crtendS")
{
    defines = ["__CRTENDS"]
}

crt_file("crt1")
{
    defines = ["__CRT1"]
}

crt_file("crti")
{
    defines = ["__CRTI"]
}

crt_file("crtn")
{
    defines = ["__CRTN"]
}

crt_file("Scrt1")
{
    defines = ["__SCRT1"]
}


group("CRT")
{
    deps =
    [
        ":crtbegin",
        ":crtbeginS",
        ":crtbeginT",
        ":crtend",
        ":crtendS",
        ":crt1",
        ":crti",
        ":crtn",
        ":Scrt1",
    ]
}
