library("ExecContext")
{
    library_name    = "System.ABI.ExecContext"
    library_version = "0.1.0"

    define_header_target = true
    use_stdlib = false

    shared_define = "SYSTEM_ABI_EXECCONTEXT_BUILD_SHARED"

    public_deps =
    [
        "//C++/LanguageSupport:LanguageSupport_headers",
        "//C++/TypeTraits",
        "//C++/Utility:Utility_headers",
        "//HW/CPU/CPUID",
    ]

    deps =
    [
        "//ABI/String",
        "//ABI/C++:Guard",
    ]

    public_headers =
    [
        "ExecContext.h",

        "Private/Config.h",
    ]

    if (current_arch == "x86")
    {
        public_headers +=
        [
            "Arch/x86/Eflags.hh",
            "Arch/x86/FloatingPoint.hh",
            "Arch/x86/GeneralRegs.hh",
            "Arch/x86/SSE.hh",
            "Arch/x86/SysV_x64.h",
            "Arch/x86/SysV_x86.h",
            "Arch/x86/Xsave.hh",
        ]
    }

    sources =
    [
    ]

    if (current_arch == "arm")
    {
        sources +=
        [
            "Arch/ARM/ARM.cc",
            "Arch/ARM/AAPCS32.S",
            "Arch/ARM/AAPCS64.S",
        ]
    }
    else if (current_arch == "mips")
    {
        sources +=
        [
            "Arch/MIPS/EABI32.S",
            "Arch/MIPS/EABI64.S",
            "Arch/MIPS/N32.S",
            "Arch/MIPS/N64.S",
            "Arch/MIPS/O32.S",
            "Arch/MIPS/O64.S",
        ]
    }
    else if (current_arch == "powerpc")
    {
        sources +=
        [
            "Arch/PowerPC/PPC.cc",
            "Arch/PowerPC/PPC32_SysV.S",
            "Arch/PowerPC/PPC64_Elf.S",
        ]
    }
    else if (current_arch == "sparc")
    {
        sources +=
        [
            "Arch/Sparc/32bit.S",
            "Arch/Sparc/64bit.S",
        ]
    }
    else if (current_arch == "x86")
    {
        sources +=
        [
            "Arch/x86/FloatingPoint.cc",
            "Arch/x86/SysV_x64.cc",
            "Arch/x86/SysV_x64.S",
            "Arch/x86/SysV_x86.S",
            "Arch/x86/Xsave.cc",
        ]
    }
    else
    {
        assert(false, "unsupported architecture: ${current_arch}")
    }

    inputs =
    [
        "version.ld"
    ]

    ldflags =
    [
        "-Wl,--version-script," + rebase_path("Source/System/ABI/ExecContext/" + inputs[0], root_build_dir),
    ]
}
